fixed overflow

--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@ html, body {
     max-width: 1100px;
     margin: 0 auto;
     padding: 1em 1em;
+    overflow: hidden;
 }
 @media (max-width: 1023px) {
    .content {
@@ -215,7 +216,7 @@ hr {
     display: flex;
     align-items: center;
     width: 100%;
-    margin-bottom: 0;
+    margin-bottom: -3em;
 }
 
 @media (min-width: 1024px) {
